make standard response in auth
